testsuite/poke.pkl/cast-offsets-diag-1.pk
/* { dg-do compile } */

var x = 23#B as string; /* { dg-error "not allowed" } */
